--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,18 +1,25 @@
 {
-  "name": "frontend",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "eslint": "8.47.0",
-    "eslint-config-next": "13.4.19",
-    "next": "13.4.19",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
-  }
+	"name": "frontend",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint"
+	},
+	"dependencies": {
+		"@react-three/drei": "^9.92.7",
+		"@react-three/fiber": "^8.15.12",
+		"@react-three/postprocessing": "^2.15.11",
+		"@types/three": "^0.160.0",
+		"eslint": "8.47.0",
+		"eslint-config-next": "13.4.19",
+		"next": "13.4.19",
+		"next-transpile-modules": "^10.0.1",
+		"postprocessing": "^6.34.1",
+		"react": "18.2.0",
+		"react-dom": "18.2.0",
+		"three": "^0.160.0"
+	}
 }
