--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
 		"postprocessing": "^6.34.1",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
-		"three": "^0.160.0"
+		"three": "^0.160.0",
+		"three-stdlib": "^2.28.11"
 	}
 }
